[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main/Audio.gd" type="Script" id=1]
[ext_resource path="res://Sounds/SoundMenu.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=34]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=30]
size = 14
font_data = SubResource( 34 )

[sub_resource type="DynamicFontData" id=32]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=24]
size = 21
font_data = SubResource( 32 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0.639216 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 1, 1, 1 )

[node name="Audio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -32.5
margin_right = 87.5
margin_bottom = 32.5
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -28.0
margin_right = 87.5
margin_bottom = 28.0

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 46.0
margin_bottom = 56.0

[node name="Master" type="Label" parent="HBoxContainer/Labels"]
margin_right = 46.0
margin_bottom = 15.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 30 )
text = "Master"

[node name="Music" type="Label" parent="HBoxContainer/Labels"]
margin_top = 20.0
margin_right = 46.0
margin_bottom = 35.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 30 )
text = "Music"

[node name="SoundFx" type="Label" parent="HBoxContainer/Labels"]
margin_top = 40.0
margin_right = 46.0
margin_bottom = 55.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 30 )
text = "SoundFx"

[node name="Slider" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 50.0
margin_right = 175.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="HBoxContainer/Slider"]
margin_right = 125.0
margin_bottom = 16.0

[node name="Music" type="HSlider" parent="HBoxContainer/Slider"]
margin_top = 20.0
margin_right = 125.0
margin_bottom = 36.0

[node name="SoundFx" type="HSlider" parent="HBoxContainer/Slider"]
margin_top = 40.0
margin_right = 125.0
margin_bottom = 56.0

[node name="BackAudio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 271.0
margin_right = 32.0
margin_bottom = 300.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "BACK"

[node name="SoundMenu" parent="." instance=ExtResource( 2 )]

[connection signal="value_changed" from="HBoxContainer/Slider/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Slider/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Slider/SoundFx" to="." method="_on_SoundFx_value_changed"]
[connection signal="pressed" from="BackAudio" to="." method="_on_BackAudio_pressed"]
